# worldwide

./: .gitignore  README_FINAL.md
worldwide/: .env.example  .gitignore  DEPLOYMENT.md  FINAL_SUMMARY.md  GITHUB.md  IMAGE_SETUP.md  Procfile  README.md  SETUP_COMPLETE.md  build.sh  create_superuser.py  download_images.py  manage.py  pyproject.toml  render.yaml  requirements.txt  seed_data.py  setup.sh  setup_images.sh  verify_setup.sh
worldwide/accounts/: admin.py  forms.py  models.py  urls.py  views.py
worldwide/accounts/migrations/: 0001_initial.py
worldwide/cart/: admin.py  cart.py  context_processors.py  models.py  urls.py  views.py
worldwide/core/: admin.py  admin_urls.py  context_processors.py  models.py  urls.py  views.py
worldwide/core/migrations/: 0001_initial.py  0002_sitesettings_airtel_money_enabled_and_more.py  0003_productlinkrequest.py
worldwide/orders/: admin.py  models.py  urls.py  views.py
worldwide/orders/migrations/: 0001_initial.py  0002_alter_order_status.py
worldwide/payments/: admin.py  models.py  services.py  urls.py  views.py
worldwide/payments/migrations/: 0001_initial.py  0002_payment_amount_rwf_payment_phone_number_and_more.py
worldwide/products/: admin.py  context_processors.py  models.py  urls.py  views.py
worldwide/reviews/: admin.py  models.py  urls.py  views.py
worldwide/search/: admin.py  models.py  urls.py  views.py
worldwide/shipping/: admin.py  models.py  urls.py  views.py
worldwide/wishlist/: admin.py  models.py  urls.py  views.py
worldwide/worldwide/: asgi.py  settings.py  storage.py  urls.py  wsgi.py
(+36 files in other folders)
