[project]
name = "worldwide"
version = "1.0.0"
description = "WorldWide - Your One-Stop E-Commerce Platform"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "pillow>=11.0",
    "stripe>=11.0",
    "gunicorn>=23.0",
    "django-forms-bootstrap>=3.1.0",
    "django-storages>=1.14.2",
    "boto3>=1.28.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "celery>=5.4",
    "django-celery-beat>=2.7",
    "python-decouple>=3.8",
    "whitenoise>=6.8",
    "requests>=2.32",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.4",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "coverage>=7.6",
    "black>=24.0",
    "ruff>=0.8",
]
